--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <div data-control="container" class="container">
       <h1 class="bg_move">Tic Tac Toe</h1>
       <div data-control="gameContainer" class="game-container"></div>
-      <p data-control="winnerMessage"></p>
+      <p data-control="winnerMessage" class="winner-text"></p>
       <button onclick="resetGame()" type="reset" class="glow-on-hover">
         Reset
       </button>
     </div>
+    <script type="text/javascript" src="./confetti.js"></script>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
