--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" />
+    <link rel="icon" src="./images/Tic_tac_toe.svg.png" />
     <meta name="descripton" content="Tik Tac Toe" />
     <title>Tik Tac Toe</title>
     <link rel="stylesheet" href="main.css" />
